--- a/sobre.html
+++ b/sobre.html
@@ -18,6 +18,10 @@
       </nav>
       <button class="button-menu-toggle">Menu</button>
     </div>
+    <main>
+      <div class="greeting">
+        <p>contenido relevante</p>
+      </div>
     <div class="contenedor">
     <h1>Acerca de</h1>
     <p>¡Bienvenido a nuestra página “Acerca de”! Aquí, aprenderás más sobre nuestra empresa y los servicios que ofrecemos.</p>
@@ -28,5 +32,6 @@
     <img src="terrier.png" alt="TERRIER" />
     <img src="siberiano.png" alt="SIBERIANO" />
 </div>
+</main>
 </body>
 </html>
